[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/EnergyButton.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans30.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/RedEnergy.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]
resource_name = "Highlight"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.4, 1.4, 1.4, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="EnergyButton" type="TextureButton"]
modulate = Color( 1.4, 1.4, 1.4, 0.71 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1846.0
margin_bottom = -1006.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -8.5
margin_top = -42.0
margin_right = 8.5
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Highlight = SubResource( 2 )
anims/Idle = SubResource( 3 )
[connection signal="mouse_entered" from="." to="." method="_on_EnergyButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EnergyButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Control_pressed"]
